[package]
name = "chrometracer"
version = "0.1.1"
edition = "2021"

authors = ["Youseok Yang <ileixe@gmail.com>"]
categories = ["asynchronous", "development-tools::debugging", "development-tools::profiling"]
description = "A tiny Chrometracing library."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11.2"
lazy_static = "1.4.0"
serde_json = "1.0.83"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

chrometracer-attributes = { path = "../chrometracer-attributes", version = "0.1.0" }
crossbeam-channel = "0.5.6"
crossbeam-queue = "0.3.6"
tracing-chrometrace = "0.1.19"